[package]
name = "dtls_udp_example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing dependencies
udp-dtls = "0.1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0"
bytes = "1.5"
csv = "1.2"

[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"