[package]
name = "websocket_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }  # Enable native-tls feature
url = "2"
native-tls = "0.2"
tokio-native-tls = "0.3"
serde_json = "1.0"
bytes = "1.5"
csv = "1.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
