[package]
name = "webtransport_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
rustls-pemfile = "2.0"
quinn = "0.11"
quinn-proto = "0.11"
aws-lc-rs = "1"
chrono = "0.4"
url = "2.5"
serde_json = "1.0"
csv = "1.3"

web-transport-quinn = { git = "https://github.com/kixelated/web-transport-rs", rev = "74c0187", package = "web-transport-quinn" }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"